# TFINTA

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.api  Dockerfile.apidb  Makefile  README.md  SECURITY.md  _python_template.py  dart.md  dart.py  docker-compose.yml  gtfs.md  gtfs.py  gtfs_data_model.py  gtfs_test.py  pyproject.toml  realtime-api.md  realtime-apidb.md  realtime.md  requirements.txt  run_all_tests.py  run_coverage.sh  stations.py  stations_test.py  trains.py
.github/: copilot-instructions.md  dependabot.yaml
.github/workflows/: ci.yaml  codeql.yaml
.tfinta-data/: transit.db
db/: migrate.sh  postgresql-tfinta.conf
db/migrations/: 000_create_database.sql  001_initial_schema.sql
deploy/gce/: deploy_gce_postgres.sh
src/tfinta/: __init__.py  api.py  api_server.py  apidb.py  apidb_server.py  dart.py  db.py  gtfs.py  gtfs_data_model.py  realtime.py  realtime_data_model.py  stations.py  tfinta_base.py  trains.py
tests/: __init__.py  api_server_test.py  api_test.py  apidb_server_test.py  apidb_test.py  conftest.py  dart_test.py  db_test.py  gtfs_data.py  gtfs_test.py  realtime_data.py  realtime_test.py  run_coverage.sh  stations_test.py  tfinta_base_test.py  util.py
tests/data/: GTFS Operator Files - 20250621.csv
tests/data/realtime/: getAllStations.xml  getCurrentTrains.xml  getStationDataByCode.xml  getTrainMovements.xml
tests/data/zip_1/: calendar.txt  calendar_dates.txt  extra.txt  feed_info.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
tests_integration/: __init__.py  test_installed_cli.py
