# pyproject.toml  (preferred for new projects, PEP 621)

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TFINTA"
version = "1.0.0"
description = "TFI/NTA database and utilities"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "KeriBella", email = "keribella@git.com" },
  { name = "Daniel Balparda", email = "balparda@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  # Baselib pulled straight from a tagged commit on GitHub
  "baselib @ git+https://github.com/balparda/baselib.git@1.2",
]

# test with:
# $ python3
# >>> import sys, tomli, pathlib
# >>> tomli.loads(pathlib.Path('pyproject.toml').read_text())
