# pyproject.toml  (preferred for new projects, PEP 621)

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TFINTA"
version = "1.0.0"
description = "TFI/NTA database and utilities"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "KeriBella", email = "keribella@git.com" },
  { name = "Daniel Balparda", email = "balparda@gmail.com" }
]
requires-python = ">=3.13.5"  # if version changes, see .vscode/tasks.json & README.md
dependencies = [
  # Baselib pulled straight from a tagged commit on GitHub
  "baselib @ git+https://github.com/balparda/baselib.git@1.5"
]

[tool.setuptools]
packages = ["baselib"]           # the importable name

[tool.setuptools.package-dir]
baselib = "."                    # maps the name to the repo root

[tool.setuptools.package-data]
"TFINTA" = ["py.typed"]

# test with:
# $ python3
# >>> import sys, tomli, pathlib
# >>> tomli.loads(pathlib.Path('pyproject.toml').read_text())
